# smplx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Simplex.example.toml  Simplex.toml  deny.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/actions/setup/: action.yml
.github/scripts/: setup-simplex
.github/workflows/: ci.yml  fixtures.yml  lint.yml  publish-core.yml  release.yml  tests.yml
assets/: default_elementsd.conf
crates/artifacts/: Cargo.toml
crates/artifacts/src/: lib.rs  (+1 more)
crates/cli/: Cargo.toml  README.md  Simplex.default.toml
crates/cli/assets/: Simplex.default.toml
crates/cli/src/: cache_storage.rs  cli.rs  code_generator.rs  config.rs  error.rs  lib.rs
crates/cli/src/cli/: commands.rs  mod.rs
crates/cli/src/commands/: build.rs  clean.rs  commands.rs  compilers.rs  core.rs  error.rs  example.rs  init.rs  install.rs  mod.rs  new.rs  regtest.rs  test.rs
crates/cli/src/config/: config.rs  core.rs  error.rs  mod.rs
crates/cli/tests/: test2.rs
crates/cli/tests/hello/: test333.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: blinder.rs  constants.rs  error.rs  fee_rate_fetcher.rs  lib.rs  runner.rs  scripts.rs  tx_inclusion.rs
crates/core/src/assets/: test-tx-incl-block.hex
crates/explorer/: Cargo.toml  resp.json
crates/explorer/src/: error.rs  lib.rs  traits.rs
crates/explorer/src/elements_rpc/: mod.rs  types.rs
crates/explorer/src/esplora/: mod.rs  types.rs
crates/explorer/src/waterfall/: mod.rs  types.rs
crates/macros/: Cargo.toml
crates/macros-core/: Cargo.toml
crates/macros-core/src/: lib.rs
crates/macros-core/src/attr/: codegen.rs  mod.rs  parse.rs  program.rs  types.rs
crates/macros-core/src/env/: mod.rs
crates/macros-core/src/test/: mod.rs
crates/macros/src/: lib.rs
crates/macros/src/macros_core/: mod.rs  program.rs
crates/macros/src/macros_core/attr/: codegen.rs  mod.rs  parse.rs
crates/macros/src/macros_core/test/: mod.rs
crates/provider/: Cargo.toml
crates/provider/src/: error.rs  lib.rs
crates/provider/src/elements_rpc/: mod.rs  types.rs
crates/provider/src/esplora/: mod.rs
crates/regtest/: Cargo.toml
crates/regtest/src/: args.rs  client.rs  config.rs  error.rs  lib.rs  regtest.rs
crates/runtime/: Cargo.toml  README.md
crates/sdk/: Cargo.toml  README.md
crates/sdk/src/: arguments.rs  constants.rs  error.rs  global.rs  lib.rs  program.rs  provider.rs  signed_transaction.rs  signer.rs  utils.rs  witness.rs  witness_transaction.rs
crates/sdk/src/presets/: mod.rs  p2pk.rs
crates/sdk/src/program/: arguments.rs  core.rs  error.rs  logger.rs  mod.rs  program.rs  storage.rs  witness.rs
crates/sdk/src/provider/: core.rs  error.rs  esplora.rs  mod.rs  network.rs  provider.rs  simplex.rs
crates/sdk/src/provider/rpc/: elements.rs  error.rs  mod.rs  types.rs
crates/sdk/src/signer/: core.rs  error.rs  key_origin.rs  mod.rs  signer.rs  wtns_injector.rs  wtns_parser.rs
crates/sdk/src/simplicityhl_core/: blinder.rs  constants.rs  error.rs  fee_rate_fetcher.rs  mod.rs  runner.rs  scripts.rs
crates/sdk/src/transaction/: error.rs  final_transaction.rs  mod.rs  partial_input.rs  partial_output.rs  transaction.rs  tx_receipt.rs  utxo.rs
crates/sdk/tests/: test.rs
crates/simplex/: Cargo.toml
crates/simplex/examples/: example.rs  example2.rs  test_roundtrip.rs
crates/simplex/src/: lib.rs
crates/simplex/tests/: compile_test.rs  compiletest.rs  simplex_test.rs
crates/simplex/tests/ui/: array_tr_storage.rs  bytes32_tr_storage.rs  dual_currency_deposit.rs  dual_currency_deposit.stderr  either_with_single_witness.rs  exotic_values.rs  list_check.rs  option_offer.rs  options.rs  simple_storage.rs  simple_storage.simf  single_bit.rs
crates/simplex/tests/ui_simfs/: bytes32_tr_storage.simf  either_with_single_witness.simf  list_check.simf  single_bit.simf
crates/smplx-build/: Cargo.toml
crates/smplx-build/src/: lib.rs
crates/template-gen/: Cargo.toml
crates/test/: Cargo.toml
crates/test/src/: common.rs  config.rs  context.rs  error.rs  lib.rs  network_utils.rs  provider.rs
crates/test/src/fuzz/: args_strategy.rs  builders.rs  core.rs  engine.rs  mod.rs  utils.rs
crates/test/src/fuzz/args_strategy/: random.rs  random_interesting.rs  random_pool.rs
crates/test/src/fuzz/builders/: dummy_program.rs  final_tx_builder.rs
crates/test/src/macros/: core.rs  macros.rs  mod.rs
crates/test/src/mutantesting/: args_strategy.rs  blueprint_constructor.rs  core.rs  engine.rs  mod.rs  provider.rs  strategy.rs  utils.rs
crates/test/src/mutantesting/strategy/: args.rs  pset.rs
crates/test/src/testing/: config.rs  mod.rs  rpc_provider.rs
crates/test/src/wallet_abi/: bootstrap.rs  harness.rs  mod.rs  request_builder.rs  state.rs  types.rs
crates/test/src/wallet_abi/adapters/: broadcaster.rs  mod.rs  output_allocator.rs  prevout_resolver.rs  receive_address_provider.rs  session_factory.rs  signer.rs
crates/user/: Cargo.toml
example/: Cargo.toml  Simplex.toml
example/simf/: p2pk.simf
example/src/: lib.rs  main.rs
example/src/artifacts/: mod.rs  options.rs  p2pk.rs
example/tests/: draft_test.rs
examples/basic/: .gitignore  Cargo.toml  README.md  Simplex.toml  build.rs
examples/options/: Cargo.toml  Simplex.toml
examples/p2pk/: Cargo.toml  Simplex.toml
examples/test_usage/: Cargo.toml  Simplex.toml
examples/test_usage/tests/: draft_test.rs
fixtures/: Cargo.toml  Simplex.toml
fixtures/proptest-regressions/: possible_interface_failure_program_with_pool.txt  possible_interface_simple_program.txt
fixtures/simf/: dummy_program.simf  failure_test.simf  simple_storage.simf
fixtures/simf/imports/: multidep.simf
fixtures/tests/: basic_test.rs  confidential_test.rs  hack_tests.rs  log_level.rs  multidep_test.rs  nested_sig.rs  prop_testing.rs  prop_testing_new.rs  reissuance_test.rs  wallet_abi.rs
scripts/: publish
simplex/: Cargo.toml
simplexup/: README.md  install  simplexup
(+55 files in other folders)
