[workspace]
resolver = "3"
members = [
    "crates/*",
]
exclude = ["examples/basic"]

[workspace.package]
license = "MIT"
edition = "2024"

[workspace.lints.clippy]
multiple_crate_versions = "allow"

[workspace.dependencies]
simplex-macros = { path = "./crates/macros" }
simplex-build = { path = "./crates/build" }
simplex-test = { path = "./crates/test" }
simplex-regtest = { path = "./crates/regtest" }
simplex-sdk = { path = "./crates/sdk" }
simplex = { path = "./crates/simplex" }

serde = { version = "1.0.228", features = ["derive"]}
bincode = { version = "2.0.1", features = ["serde"] }
hex = { version = "0.4.3" }
sha2 = { version = "0.10.9", features = ["compress"] }
thiserror = { version = "2.0.18" }
toml = { version = "0.9.8" }
minreq = { version = "2.14.1", features = ["https", "json-using-serde"] }
electrsd = { version = "0.29.0", features = ["legacy"] }

simplicityhl = { git = "https://github.com/BlockstreamResearch/SimplicityHL.git", rev = "568b462" }

[patch.crates-io]
simplicity-sys = { git = "https://github.com/BlockstreamResearch/rust-simplicity", tag = "simplicity-sys-0.6.1" }
