[workspace]
resolver = "3"
members = [
    "crates/*",
]
exclude = ["examples/basic"]

[workspace.package]
license = "MIT"
edition = "2024"

[workspace.lints.clippy]
multiple_crate_versions = "allow"

[workspace.dependencies]
smplx-macros = { path = "./crates/macros", version = "0.0.1" }
smplx-build = { path = "./crates/build", version = "0.0.1" }
smplx-test = { path = "./crates/test", version = "0.0.1" }
smplx-regtest = { path = "./crates/regtest", version = "0.0.1" }
smplx-sdk = { path = "./crates/sdk", version = "0.0.1" }
smplx-std = { path = "./crates/simplex", version = "0.0.1" }

serde = { version = "1.0.228", features = ["derive"]}
hex = { version = "0.4.3" }
sha2 = { version = "0.10.9", features = ["compress"] }
thiserror = { version = "2.0.18" }
toml = { version = "0.9.8" }
minreq = { version = "2.14.1", features = ["https", "json-using-serde"] }
electrsd = { version = "0.29.0", features = ["legacy"] }

simplicityhl = { git = "https://github.com/BlockstreamResearch/SimplicityHL.git", rev = "568b462" }

[patch.crates-io]
simplicity-sys = { git = "https://github.com/BlockstreamResearch/rust-simplicity", tag = "simplicity-sys-0.6.1" }
