[package]
name = "draft_example"
edition = "2024"
rust-version = "1.90.0"
version = "0.1.0"

[dependencies]
simplex = { path = "../simplex/crates/simplex" }

simplicityhl = { git = "https://github.com/ikripaka/SimplicityHL/", branch = "feature/rich-params" }
trybuild = { version = "1.0.115" }
anyhow = { version = "1.0.101" }
