[package]
name = "simplex-cli"
version = "0.1.0"
edition = "2024"
description = "Simplicity helper CLI for Liquid testnet"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[[bin]]
name = "simplex"
path = "src/bin/main.rs"

[lints]
workspace = true

[dependencies]
simplex-test = { workspace = true }
simplex-sdk = { workspace = true }
simplex-macros-core = { workspace = true }

simplicityhl = { workspace = true }
electrsd = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = "1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ctrlc = { version =  "3.5.2", features = ["termination"] }
glob = { version = "0.3.3"}

[dev-dependencies]
tracing = { workspace = true }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }