[package]
name = "simplex-cli"
version = "0.1.0"
description = "Simplex cli with various utilities to manage a simplicity project"
license.workspace = true
edition.workspace = true

[[bin]]
name = "simplex"
path = "src/bin/main.rs"

[lints]
workspace = true

[dependencies]
simplex-regtest = { workspace = true }
simplex-test = { workspace = true }
simplex-build = { workspace = true }
simplex-sdk = { workspace = true }

simplicityhl = { workspace = true }
electrsd = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

anyhow = "1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ctrlc = { version =  "3.5.2", features = ["termination"] }
