[package]
name = "simplex-explorer"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version = "1.90.0"
description = "High-level explorer helper for standardising blocks exploration in Simplicity."
repository = "https://github.com/BlockstreamResearch/simplex"
documentation = "https://docs.rs/simplex"
keywords = ["esplora", "waterfall", "bitcoin", "elements", "explorer"]
categories = ["cryptography::cryptocurrencies", "web-programming::http-client", "wasm"]

[lints]
workspace = true

[features]


[dependencies]
async-trait = { version = "0.1.89" }
simplicityhl = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = { version = "2.0.18" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex-simd = "0.8.0"
bitcoin_hashes = "0.14.1"
simplex-core = { workspace = true }
corepc-client = { version = "0.10.0", features = ["client-sync", "jsonrpc"] }
corepc-types = { version = "0.11.0"}

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
