[package]
name = "simplex-macros"
version = "0.1.0"
description = "Simplex macros re-export package"
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
simplex-build = { workspace = true } 
simplex-test = { workspace = true }

syn = { version = "2.0.114", default-features = false, features = ["parsing", "proc-macro"] }
