[package]
name = "simplex-macros"
version = "0.0.1"
description = "Simplex macros re-export package"
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
simplex-build = { workspace = true, version = "0.0.1" } 
simplex-test = { workspace = true, version = "0.0.1" }

syn = { version = "2.0.114", default-features = false, features = ["parsing", "proc-macro"] }
