[package]
name = "simplex-provider"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version = "1.90.0"
description = "High-level explorer helper for standardising blocks exploration in Simplicity."
repository = "https://github.com/BlockstreamResearch/simplex"
documentation = "https://docs.rs/simplex"
keywords = ["esplora", "waterfall", "bitcoin", "elements", "explorer"]
categories = ["cryptography::cryptocurrencies", "web-programming::http-client", "wasm"]

[lints]
workspace = true

[dependencies]
simplicityhl = { workspace = true }
thiserror = { workspace = true }
electrsd = { workspace = true }
async-trait = { version = "0.1.89" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
minreq = { version = "2.14", features = ["https", "json-using-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex-simd = "0.8.0"
bitcoin_hashes = "0.14.1"
