[package]
name = "simplex-sdk"
version = "0.1.0"
edition = "2024"
description = "Simplex SDK"
license = "MIT OR Apache-2.0"
readme = "README.md"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
sha2 = { workspace = true }
minreq = { workspace = true }
simplicityhl = { workspace = true }
electrsd = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }

serde_json = { version = "1.0" }
elements-miniscript = { version = "0.4", features = ["base64", "serde"] }
bip39 = { version = "2.0.0", features = ["rand"] }
dyn-clone = { version = "1.0.20" }
bitcoin_hashes = { version = "0.14.1" }
