[package]
name = "smplx-sdk"
version = "0.0.4"
description = "Simplex sdk to simplify the development with simplicity"
license.workspace = true
edition.workspace = true
repository = "https://github.com/BlockstreamResearch/smplx"
readme = "../../README.md"

[dependencies]
thiserror = { workspace = true }
sha2 = { workspace = true }
minreq = { workspace = true }
simplicityhl = { workspace = true }
electrsd = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }

serde_json = { version = "1.0" }
elements-miniscript = { version = "0.4", features = ["base64", "serde"] }
bip39 = { version = "2.0.0", features = ["rand"] }
dyn-clone = { version = "1.0.20" }
bitcoin_hashes = { version = "0.14.1" }

[lints.rust]
rust_2018_idioms = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
deprecated_in_future = "warn"

[lints.clippy]
multiple_crate_versions = "allow"