[package]
name = "simplex"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "High-level helpers for compiling and executing Simplicity programs on Liquid"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlockstreamResearch/simplex"
readme = "README.md"
documentation = "https://docs.rs/simplex"
keywords = ["simplicity", "liquid", "bitcoin", "elements", "taproot"]
categories = ["cryptography::cryptocurrencies"]

[lints]
workspace = true

[dependencies]
simplex-macros = { workspace = true }
simplex-test = { workspace = true }
simplex-sdk = { workspace = true }

bincode = { workspace = true }
serde = { workspace = true }
simplicityhl = { workspace = true, features = ["serde"] }

either = { version = "1.15.0", features = ["serde"] }

[dev-dependencies]
trybuild = { version = "1.0.115" }
