[package]
name = "simplex-test"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[lints]
workspace = true


[dependencies]
simplex-provider = { workspace = true }
simplex-sdk = { workspace = true }

thiserror = { workspace = true }
simplicityhl = { workspace = true }
electrsd = { workspace = true }
serde = { workspace = true }
