[package]
name = "draft_example"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
simplex = { workspace = true }

simplicityhl = { workspace = true }

[dev-dependencies]
anyhow = { version = "1.0.102" }
simplicityhl-core = { version =  "0.4.2" }